working on layout

--- a/index.html
+++ b/index.html
@@ -8,5 +8,91 @@
     <link rel="stylesheet" href="styles/normalize.css" />
     <link rel="stylesheet" href="styles/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <img
+        id="logo"
+        src="https://w7.pngwing.com/pngs/914/758/png-transparent-github-social-media-computer-icons-logo-android-github-logo-computer-wallpaper-banner-thumbnail.png"
+        alt="GitHub Logo"
+      />
+      <!-- <h1>Search Bar,</h1>
+      <h1>Buttons</h1> -->
+    </header>
+    <header class="overview">Overview</header>
+    <main class="main-content">
+      <aside>
+        <!-- profile pic and username -->
+      </aside>
+      <section class="github-repositories">
+        <!-- list of repositories -->
+        <ul class="repository-list">
+          <div id="search-bar" class="repositories">Search Bar</div>
+          <div class="repositories">
+            <li>
+              <a>vertical-timeline</a>
+              <p class="public">Public</p>
+            </li>
+            <button class="star" type="menu">Star</button>
+          </div>
+          <div class="repositories">
+            <li>
+              <a>octocats</a>
+              <p class="public">Public</p>
+            </li>
+          </div>
+          <div class="repositories">
+            <li>
+              <a>js-war-game</a>
+              <p class="public">Public</p>
+            </li>
+          </div>
+          <div class="repositories">
+            <li>
+              <a>awesomely-ugly-website</a>
+              <p class="public">Public</p>
+            </li>
+          </div>
+          <div class="repositories">
+            <li>
+              <a>js-etsy-iteration</a>
+              <p class="public">Public</p>
+            </li>
+          </div>
+          <div class="repositories">
+            <li>
+              <a>js-array-practice</a>
+              <p class="public">Public</p>
+            </li>
+          </div>
+          <div class="repositories">
+            <li>
+              <a>js-responsive-calculator</a>
+              <p class="public">Public</p>
+            </li>
+          </div>
+          <div class="repositories">
+            <li>
+              <a>js-memory-game</a>
+              <p class="public">Public</p>
+            </li>
+          </div>
+          <div class="repositories">
+            <li>
+              <a>vertical-timeline</a>
+              <p class="public">Public</p>
+            </li>
+          </div>
+          <div class="repositories">
+            <li>
+              <a>vertical-timeline</a>
+              <p class="public">Public</p>
+            </li>
+          </div>
+        </ul>
+      </section>
+      <footer>
+        <!-- footer stuff -->
+      </footer>
+    </main>
+  </body>
 </html>
