--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                   <p class="status">Updated 18 hours ago</p>
                 </div>
               </li>
-              <button class="star" type="menu">
+              <button class="star" type="sumbit">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   viewBox="0 0 16 16"
