--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="styles/normalize.css" />
     <link rel="stylesheet" href="styles/styles.css" />
     <link rel="stylesheet" href="styles/header.css" />
+    <link rel="stylesheet" href="styles/aside.css" />
+    <link rel="stylesheet" href="styles/footer.css" />
   </head>
   <body>
     <main class="container">
@@ -25,18 +27,113 @@
               d="M8 0c4.42 0 8 3.58 8 8a8.013 8.013 0 0 1-5.45 7.59c-.4.08-.55-.17-.55-.38 0-.27.01-1.13.01-2.2 0-.75-.25-1.23-.54-1.48 1.78-.2 3.65-.88 3.65-3.95 0-.88-.31-1.59-.82-2.15.08-.2.36-1.02-.08-2.12 0 0-.67-.22-2.2.82-.64-.18-1.32-.27-2-.27-.68 0-1.36.09-2 .27-1.53-1.03-2.2-.82-2.2-.82-.44 1.1-.16 1.92-.08 2.12-.51.56-.82 1.28-.82 2.15 0 3.06 1.86 3.75 3.64 3.95-.23.2-.44.55-.51 1.07-.46.21-1.61.55-2.33-.66-.15-.24-.6-.83-1.23-.82-.67.01-.27.38.01.53.34.19.73.9.82 1.13.16.45.68 1.31 2.69.94 0 .67.01 1.3.01 1.49 0 .21-.15.45-.55.38A7.995 7.995 0 0 1 0 8c0-4.42 3.58-8 8-8Z"
             ></path>
           </svg>
-          <form id="form">
-            <input type="search" placeholder="Search or jump to..." />
+          <form class="header-form">
+            <input
+              class="search"
+              type="search"
+              placeholder="Search or jump to..."
+            />
           </form>
+          <nav>Pull Requests</nav>
+          <nav>Issues</nav>
+          <nav>Code Spaces</nav>
+          <nav>Marketplace</nav>
+          <nav>Explore</nav>
           <!-- <h1>Buttons</h1> -->
         </div>
-        <div class="header-right">bell</div>
+        <section class="header-right">
+          <div>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 16 16"
+              width="16"
+              height="16"
+            >
+              <path
+                fill="white"
+                d="M8 16a2 2 0 0 0 1.985-1.75c.017-.137-.097-.25-.235-.25h-3.5c-.138 0-.252.113-.235.25A2 2 0 0 0 8 16ZM3 5a5 5 0 0 1 10 0v2.947c0 .05.015.098.042.139l1.703 2.555A1.519 1.519 0 0 1 13.482 13H2.518a1.516 1.516 0 0 1-1.263-2.36l1.703-2.554A.255.255 0 0 0 3 7.947Zm5-3.5A3.5 3.5 0 0 0 4.5 5v2.947c0 .346-.102.683-.294.97l-1.703 2.556a.017.017 0 0 0-.003.01l.001.006c0 .002.002.004.004.006l.006.004.007.001h10.964l.007-.001.006-.004.004-.006.001-.007a.017.017 0 0 0-.003-.01l-1.703-2.554a1.745 1.745 0 0 1-.294-.97V5A3.5 3.5 0 0 0 8 1.5Z"
+              ></path>
+            </svg>
+          </div>
+          <div>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 16 16"
+              width="16"
+              height="16"
+            >
+              <path
+                fill="white"
+                d="M7.75 2a.75.75 0 0 1 .75.75V7h4.25a.75.75 0 0 1 0 1.5H8.5v4.25a.75.75 0 0 1-1.5 0V8.5H2.75a.75.75 0 0 1 0-1.5H7V2.75A.75.75 0 0 1 7.75 2Z"
+              ></path>
+            </svg>
+          </div>
+          <div>
+            <img
+              class="header-pic"
+              src="https://avatars.githubusercontent.com/u/130249876?s=400&u=03037c0249cde052289de79dfb9cda2807fde94c&v=4"
+              alt=""
+            />
+          </div>
+        </section>
       </header>
       <header class="overview">
-        <nav>() Overview</nav>
-        <nav>() Repositories (12)</nav>
-        <nav>() Projects</nav>
-        <nav>() Packages</nav>
+        <nav>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 16 16"
+            width="16"
+            height="16"
+          >
+            <path
+              fill="#c9d1d9"
+              d="M0 1.75A.75.75 0 0 1 .75 1h4.253c1.227 0 2.317.59 3 1.501A3.743 3.743 0 0 1 11.006 1h4.245a.75.75 0 0 1 .75.75v10.5a.75.75 0 0 1-.75.75h-4.507a2.25 2.25 0 0 0-1.591.659l-.622.621a.75.75 0 0 1-1.06 0l-.622-.621A2.25 2.25 0 0 0 5.258 13H.75a.75.75 0 0 1-.75-.75Zm7.251 10.324.004-5.073-.002-2.253A2.25 2.25 0 0 0 5.003 2.5H1.5v9h3.757a3.75 3.75 0 0 1 1.994.574ZM8.755 4.75l-.004 7.322a3.752 3.752 0 0 1 1.992-.572H14.5v-9h-3.495a2.25 2.25 0 0 0-2.25 2.25Z"
+            ></path>
+          </svg>
+          Overview
+        </nav>
+        <nav id="repo">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 16 16"
+            width="16"
+            height="16"
+          >
+            <path
+              fill="#c9d1d9"
+              d="M2 2.5A2.5 2.5 0 0 1 4.5 0h8.75a.75.75 0 0 1 .75.75v12.5a.75.75 0 0 1-.75.75h-2.5a.75.75 0 0 1 0-1.5h1.75v-2h-8a1 1 0 0 0-.714 1.7.75.75 0 1 1-1.072 1.05A2.495 2.495 0 0 1 2 11.5Zm10.5-1h-8a1 1 0 0 0-1 1v6.708A2.486 2.486 0 0 1 4.5 9h8ZM5 12.25a.25.25 0 0 1 .25-.25h3.5a.25.25 0 0 1 .25.25v3.25a.25.25 0 0 1-.4.2l-1.45-1.087a.249.249 0 0 0-.3 0L5.4 15.7a.25.25 0 0 1-.4-.2Z"
+            ></path>
+          </svg>
+          Repositories (12)
+        </nav>
+        <nav>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 16 16"
+            width="16"
+            height="16"
+          >
+            <path
+              fill="#c9d1d9"
+              d="M0 1.75C0 .784.784 0 1.75 0h12.5C15.216 0 16 .784 16 1.75v12.5A1.75 1.75 0 0 1 14.25 16H1.75A1.75 1.75 0 0 1 0 14.25ZM6.5 6.5v8h7.75a.25.25 0 0 0 .25-.25V6.5Zm8-1.5V1.75a.25.25 0 0 0-.25-.25H6.5V5Zm-13 1.5v7.75c0 .138.112.25.25.25H5v-8ZM5 5V1.5H1.75a.25.25 0 0 0-.25.25V5Z"
+            ></path>
+          </svg>
+          Projects
+        </nav>
+        <nav>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 16 16"
+            width="16"
+            height="16"
+          >
+            <path
+              fill="#c9d1d9"
+              d="m8.878.392 5.25 3.045c.54.314.872.89.872 1.514v6.098a1.75 1.75 0 0 1-.872 1.514l-5.25 3.045a1.75 1.75 0 0 1-1.756 0l-5.25-3.045A1.75 1.75 0 0 1 1 11.049V4.951c0-.624.332-1.201.872-1.514L7.122.392a1.75 1.75 0 0 1 1.756 0ZM7.875 1.69l-4.63 2.685L8 7.133l4.755-2.758-4.63-2.685a.248.248 0 0 0-.25 0ZM2.5 5.677v5.372c0 .09.047.171.125.216l4.625 2.683V8.432Zm6.25 8.271 4.625-2.683a.25.25 0 0 0 .125-.216V5.677L8.75 8.432Z"
+            ></path>
+          </svg>
+          Packages
+        </nav>
         <nav>
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -54,12 +151,85 @@
       </header>
       <div class="main-content">
         <aside>
+          <div>
+            <img
+              class="aside-pic"
+              src="https://avatars.githubusercontent.com/u/130249876?s=400&u=03037c0249cde052289de79dfb9cda2807fde94c&v=4"
+              alt=""
+            />
+          </div>
+          <div class="aside-names">
+            <h1>Vaughn Nedderman</h1>
+            <h2>Vaughnned</h2>
+          </div>
+          <div class="aside-button">
+            <button class="edit-button">Follow</button>
+          </div>
+          <div class="misc">
+            <h1>Organizations</h1>
+            <img
+              class="org-pic"
+              src="https://avatars.githubusercontent.com/u/132287707?s=64&v=4"
+              alt=""
+            />
+            <h2>Block or report</h2>
+          </div>
           <!-- profile pic and username -->
         </aside>
         <section class="github-repositories">
           <!-- list of repositories -->
           <ul class="repository-list">
-            <div id="search-bar" class="repositories">Search Bar</div>
+            <div id="search-bar" class="repositories">
+              <form class="list-form">
+                <input
+                  class="search"
+                  type="search"
+                  placeholder="Find a repository..."
+                />
+              </form>
+              <button class="search-button star2">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 16 16"
+                  width="16"
+                  height="16"
+                >
+                  <path
+                    fill="white"
+                    d="m4.427 7.427 3.396 3.396a.25.25 0 0 0 .354 0l3.396-3.396A.25.25 0 0 0 11.396 7H4.604a.25.25 0 0 0-.177.427Z"
+                  ></path>
+                </svg>
+              </button>
+              <button class="search-button name-button">Sort</button>
+              <button class="search-button star2">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 16 16"
+                  width="16"
+                  height="16"
+                >
+                  <path
+                    fill="white"
+                    d="m4.427 7.427 3.396 3.396a.25.25 0 0 0 .354 0l3.396-3.396A.25.25 0 0 0 11.396 7H4.604a.25.25 0 0 0-.177.427Z"
+                  ></path>
+                </svg>
+              </button>
+              <button class="search-button name-button">Language</button>
+              <button class="search-button star2">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 16 16"
+                  width="16"
+                  height="16"
+                >
+                  <path
+                    fill="white"
+                    d="m4.427 7.427 3.396 3.396a.25.25 0 0 0 .354 0l3.396-3.396A.25.25 0 0 0 11.396 7H4.604a.25.25 0 0 0-.177.427Z"
+                  ></path>
+                </svg>
+              </button>
+              <button class="search-button name-button">Type</button>
+            </div>
             <div class="repositories">
               <li>
                 <div class="title-div">
@@ -77,6 +247,19 @@
                   <p class="status">Updated 18 hours ago</p>
                 </div>
               </li>
+              <button class="star star2">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 16 16"
+                  width="16"
+                  height="16"
+                >
+                  <path
+                    fill="white"
+                    d="m4.427 7.427 3.396 3.396a.25.25 0 0 0 .354 0l3.396-3.396A.25.25 0 0 0 11.396 7H4.604a.25.25 0 0 0-.177.427Z"
+                  ></path>
+                </svg>
+              </button>
               <button class="star" type="sumbit">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -108,7 +291,20 @@
                   <p class="status">Updated yesterday</p>
                 </div>
               </li>
-              <button class="star" type="menu">
+              <button class="star star2">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 16 16"
+                  width="16"
+                  height="16"
+                >
+                  <path
+                    fill="white"
+                    d="m4.427 7.427 3.396 3.396a.25.25 0 0 0 .354 0l3.396-3.396A.25.25 0 0 0 11.396 7H4.604a.25.25 0 0 0-.177.427Z"
+                  ></path>
+                </svg>
+              </button>
+              <button class="star">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   viewBox="0 0 16 16"
@@ -139,6 +335,19 @@
                   <p class="status">Updated 2 days ago</p>
                 </div>
               </li>
+              <button class="star star2">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 16 16"
+                  width="16"
+                  height="16"
+                >
+                  <path
+                    fill="white"
+                    d="m4.427 7.427 3.396 3.396a.25.25 0 0 0 .354 0l3.396-3.396A.25.25 0 0 0 11.396 7H4.604a.25.25 0 0 0-.177.427Z"
+                  ></path>
+                </svg>
+              </button>
               <button class="star" type="menu">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -170,6 +379,19 @@
                   <p class="status">Updated 2 days ago</p>
                 </div>
               </li>
+              <button class="star star2">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 16 16"
+                  width="16"
+                  height="16"
+                >
+                  <path
+                    fill="white"
+                    d="m4.427 7.427 3.396 3.396a.25.25 0 0 0 .354 0l3.396-3.396A.25.25 0 0 0 11.396 7H4.604a.25.25 0 0 0-.177.427Z"
+                  ></path>
+                </svg>
+              </button>
               <button class="star" type="menu">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -202,6 +424,19 @@
                   <p class="status">Updated last week</p>
                 </div>
               </li>
+              <button class="star star2">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 16 16"
+                  width="16"
+                  height="16"
+                >
+                  <path
+                    fill="white"
+                    d="m4.427 7.427 3.396 3.396a.25.25 0 0 0 .354 0l3.396-3.396A.25.25 0 0 0 11.396 7H4.604a.25.25 0 0 0-.177.427Z"
+                  ></path>
+                </svg>
+              </button>
               <button class="star" type="menu">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -233,6 +468,19 @@
                   <p class="status">Updated last week</p>
                 </div>
               </li>
+              <button class="star star2">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 16 16"
+                  width="16"
+                  height="16"
+                >
+                  <path
+                    fill="white"
+                    d="m4.427 7.427 3.396 3.396a.25.25 0 0 0 .354 0l3.396-3.396A.25.25 0 0 0 11.396 7H4.604a.25.25 0 0 0-.177.427Z"
+                  ></path>
+                </svg>
+              </button>
               <button class="star" type="menu">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -264,6 +512,19 @@
                   <p class="status">Updated last week</p>
                 </div>
               </li>
+              <button class="star star2">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 16 16"
+                  width="16"
+                  height="16"
+                >
+                  <path
+                    fill="white"
+                    d="m4.427 7.427 3.396 3.396a.25.25 0 0 0 .354 0l3.396-3.396A.25.25 0 0 0 11.396 7H4.604a.25.25 0 0 0-.177.427Z"
+                  ></path>
+                </svg>
+              </button>
               <button class="star" type="menu">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -295,6 +556,19 @@
                   <p class="status">Updated 2 weeks ago</p>
                 </div>
               </li>
+              <button class="star star2">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 16 16"
+                  width="16"
+                  height="16"
+                >
+                  <path
+                    fill="white"
+                    d="m4.427 7.427 3.396 3.396a.25.25 0 0 0 .354 0l3.396-3.396A.25.25 0 0 0 11.396 7H4.604a.25.25 0 0 0-.177.427Z"
+                  ></path>
+                </svg>
+              </button>
               <button class="star" type="menu">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -326,6 +600,19 @@
                   <p class="status">Updated 2 weeks ago</p>
                 </div>
               </li>
+              <button class="star star2">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 16 16"
+                  width="16"
+                  height="16"
+                >
+                  <path
+                    fill="white"
+                    d="m4.427 7.427 3.396 3.396a.25.25 0 0 0 .354 0l3.396-3.396A.25.25 0 0 0 11.396 7H4.604a.25.25 0 0 0-.177.427Z"
+                  ></path>
+                </svg>
+              </button>
               <button class="star" type="menu">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -357,6 +644,19 @@
                   <p class="status">Updated 2 weeks ago</p>
                 </div>
               </li>
+              <button class="star star2">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 16 16"
+                  width="16"
+                  height="16"
+                >
+                  <path
+                    fill="white"
+                    d="m4.427 7.427 3.396 3.396a.25.25 0 0 0 .354 0l3.396-3.396A.25.25 0 0 0 11.396 7H4.604a.25.25 0 0 0-.177.427Z"
+                  ></path>
+                </svg>
+              </button>
               <button class="star" type="menu">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -388,6 +688,19 @@
                   <p class="status">Updated 2 weeks ago</p>
                 </div>
               </li>
+              <button class="star star2">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 16 16"
+                  width="16"
+                  height="16"
+                >
+                  <path
+                    fill="white"
+                    d="m4.427 7.427 3.396 3.396a.25.25 0 0 0 .354 0l3.396-3.396A.25.25 0 0 0 11.396 7H4.604a.25.25 0 0 0-.177.427Z"
+                  ></path>
+                </svg>
+              </button>
               <button class="star" type="menu">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -420,6 +733,19 @@
                   <p class="status">Updated on Apr 8</p>
                 </div>
               </li>
+              <button class="star star2">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 16 16"
+                  width="16"
+                  height="16"
+                >
+                  <path
+                    fill="white"
+                    d="m4.427 7.427 3.396 3.396a.25.25 0 0 0 .354 0l3.396-3.396A.25.25 0 0 0 11.396 7H4.604a.25.25 0 0 0-.177.427Z"
+                  ></path>
+                </svg>
+              </button>
               <button class="star" type="menu">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -437,10 +763,22 @@
             </div>
           </ul>
         </section>
-        <footer>
-          <!-- footer stuff -->
-        </footer>
       </div>
+      <footer>
+        <svg
+          id="logo"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 16 16"
+          width="16"
+          height="16"
+        >
+          <path
+            fill="white"
+            d="M8 0c4.42 0 8 3.58 8 8a8.013 8.013 0 0 1-5.45 7.59c-.4.08-.55-.17-.55-.38 0-.27.01-1.13.01-2.2 0-.75-.25-1.23-.54-1.48 1.78-.2 3.65-.88 3.65-3.95 0-.88-.31-1.59-.82-2.15.08-.2.36-1.02-.08-2.12 0 0-.67-.22-2.2.82-.64-.18-1.32-.27-2-.27-.68 0-1.36.09-2 .27-1.53-1.03-2.2-.82-2.2-.82-.44 1.1-.16 1.92-.08 2.12-.51.56-.82 1.28-.82 2.15 0 3.06 1.86 3.75 3.64 3.95-.23.2-.44.55-.51 1.07-.46.21-1.61.55-2.33-.66-.15-.24-.6-.83-1.23-.82-.67.01-.27.38.01.53.34.19.73.9.82 1.13.16.45.68 1.31 2.69.94 0 .67.01 1.3.01 1.49 0 .21-.15.45-.55.38A7.995 7.995 0 0 1 0 8c0-4.42 3.58-8 8-8Z"
+          ></path>
+        </svg>
+        <p>@ 2023 Github Inc.</p>
+      </footer>
     </main>
   </body>
 </html>
