added footer and minor changes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <header class="logo-header">
         <div class="header-left">
           <svg
-            id="logo"
+            class="logo"
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 16 16"
             width="16"
@@ -44,6 +44,7 @@
         <section class="header-right">
           <div>
             <svg
+              id="bell"
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 16 16"
               width="16"
@@ -55,7 +56,7 @@
               ></path>
             </svg>
           </div>
-          <div>
+          <div class="header-arrow">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 16 16"
@@ -67,13 +68,36 @@
                 d="M7.75 2a.75.75 0 0 1 .75.75V7h4.25a.75.75 0 0 1 0 1.5H8.5v4.25a.75.75 0 0 1-1.5 0V8.5H2.75a.75.75 0 0 1 0-1.5H7V2.75A.75.75 0 0 1 7.75 2Z"
               ></path>
             </svg>
+            <svg
+              id="plus-sign-arrow"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 16 16"
+              width="16"
+              height="16"
+            >
+              <path
+                fill="white"
+                d="m4.427 7.427 3.396 3.396a.25.25 0 0 0 .354 0l3.396-3.396A.25.25 0 0 0 11.396 7H4.604a.25.25 0 0 0-.177.427Z"
+              ></path>
+            </svg>
           </div>
-          <div>
+          <div class="header-arrow">
             <img
               class="header-pic"
               src="https://avatars.githubusercontent.com/u/130249876?s=400&u=03037c0249cde052289de79dfb9cda2807fde94c&v=4"
               alt=""
             />
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 16 16"
+              width="16"
+              height="16"
+            >
+              <path
+                fill="white"
+                d="m4.427 7.427 3.396 3.396a.25.25 0 0 0 .354 0l3.396-3.396A.25.25 0 0 0 11.396 7H4.604a.25.25 0 0 0-.177.427Z"
+              ></path>
+            </svg>
           </div>
         </section>
       </header>
@@ -766,7 +790,8 @@
       </div>
       <footer>
         <svg
-          id="logo"
+          id="logo2"
+          class="logo"
           xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 16 16"
           width="16"
@@ -778,6 +803,19 @@
           ></path>
         </svg>
         <p>@ 2023 Github Inc.</p>
+        <ul class="nav-list">
+          <li><nav>Terms</nav></li>
+          <li><nav>Privacy</nav></li>
+          <li><nav>Security</nav></li>
+          <li><nav>Status</nav></li>
+          <li><nav>Docs</nav></li>
+          <li><nav>Contact Github</nav></li>
+          <li><nav>Pricing</nav></li>
+          <li><nav>API</nav></li>
+          <li><nav>Training</nav></li>
+          <li><nav>Blog</nav></li>
+          <li><nav>About</nav></li>
+        </ul>
       </footer>
     </main>
   </body>
