--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <main class="container">
       <header class="logo-header">
-        <div class="header-left">
+        <section class="header-left">
           <svg
             class="logo"
             xmlns="http://www.w3.org/2000/svg"
@@ -40,7 +40,7 @@
           <nav>Marketplace</nav>
           <nav>Explore</nav>
           <!-- <h1>Buttons</h1> -->
-        </div>
+        </section>
         <section class="header-right">
           <div>
             <svg
