work in progress

--- a/index.html
+++ b/index.html
@@ -206,8 +206,9 @@
             <!-- <div class="repositories"> -->
             <template id="repo-title">
               <li id="repository-name">
+                <h3 id="repoList">foo</h3>
                 <p>
-                  <script>
+                  <!-- <script>
                     repos.map((item) => {
                       return g;
                     });
@@ -219,7 +220,7 @@
                     // repos.push(obj.name);
                     // // document.write("<br>");
                     // document.write("The array is defined as :", repos);
-                  </script>
+                  </script> -->
                 </p>
 
                 <button class="star star2">
