--- a/index.html
+++ b/index.html
@@ -202,58 +202,64 @@
         </aside>
         <section class="repostitories-list">
           <!-- list of repositories -->
-          <ul id="repos-list" class="repositories">
-            <!-- <div class="repositories"> -->
-            <template id="repo-title">
-              <li id="repository-name">
-                <h3 id="repoList">foo</h3>
-                <p>
-                  <!-- <script>
-                    repos.map((item) => {
-                      return g;
-                    });
-                    var x = document.createElement("p"); // Creates a new <div> node
-                    x.innerHTML = obj.name; // Sets the text content
-                    document.body.appendChild(x);
+          <!-- <ul id="repos-list" class="repositories"> -->
+          <!-- <div class="repositories"> -->
 
-                    // let repos = [];
-                    // repos.push(obj.name);
-                    // // document.write("<br>");
-                    // document.write("The array is defined as :", repos);
-                  </script> -->
-                </p>
+          <!-- <li id="repository-name"> -->
+          <script>
+            fetch(
+              "https://api.github.com/users/vaughnned/repos?sort=updated_at"
+            )
+              .then((response) => {
+                if (!response.ok) {
+                  throw new Error("");
+                }
+                return response.json();
+              })
+              .then((data) => {
+                console.log(data);
+                const namesList = document.getElementById("repoList");
+                data.forEach((item, index) => {
+                  const li = document.createElement("li");
+                  li.innerHTML = `
+                      <h3>${item.name}</h3>
+                      <button class="star star2">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 16 16"
+                  width="16"
+                  height="16"
+                >
+                  <path
+                    fill="white"
+                    d="m4.427 7.427 3.396 3.396a.25.25 0 0 0 .354 0l3.396-3.396A.25.25 0 0 0 11.396 7H4.604a.25.25 0 0 0-.177.427Z"
+                  ></path>
+                </svg>
+              </button>
+              <button class="star" type="sumbit">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 16 16"
+                  width="16"
+                  height="16"
+                >
+                  <path
+                    fill="white"
+                    d="M8 .25a.75.75 0 0 1 .673.418l1.882 3.815 4.21.612a.75.75 0 0 1 .416 1.279l-3.046 2.97.719 4.192a.751.751 0 0 1-1.088.791L8 12.347l-3.766 1.98a.75.75 0 0 1-1.088-.79l.72-4.194L.818 6.374a.75.75 0 0 1 .416-1.28l4.21-.611L7.327.668A.75.75 0 0 1 8 .25Zm0 2.445L6.615 5.5a.75.75 0 0 1-.564.41l-3.097.45 2.24 2.184a.75.75 0 0 1 .216.664l-.528 3.084 2.769-1.456a.75.75 0 0 1 .698 0l2.77 1.456-.53-3.084a.75.75 0 0 1 .216-.664l2.24-2.183-3.096-.45a.75.75 0 0 1-.564-.41L8 2.694Z"
+                  ></path>
+                </svg>
+                Star
+              </button>
+                      `;
+                  namesList.append(li);
+                });
+              });
+          </script>
+          <li id="repoList"></li>
 
-                <button class="star star2">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    viewBox="0 0 16 16"
-                    width="16"
-                    height="16"
-                  >
-                    <path
-                      fill="white"
-                      d="m4.427 7.427 3.396 3.396a.25.25 0 0 0 .354 0l3.396-3.396A.25.25 0 0 0 11.396 7H4.604a.25.25 0 0 0-.177.427Z"
-                    ></path>
-                  </svg>
-                </button>
-                <button class="star" type="sumbit">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    viewBox="0 0 16 16"
-                    width="16"
-                    height="16"
-                  >
-                    <path
-                      fill="white"
-                      d="M8 .25a.75.75 0 0 1 .673.418l1.882 3.815 4.21.612a.75.75 0 0 1 .416 1.279l-3.046 2.97.719 4.192a.751.751 0 0 1-1.088.791L8 12.347l-3.766 1.98a.75.75 0 0 1-1.088-.79l.72-4.194L.818 6.374a.75.75 0 0 1 .416-1.28l4.21-.611L7.327.668A.75.75 0 0 1 8 .25Zm0 2.445L6.615 5.5a.75.75 0 0 1-.564.41l-3.097.45 2.24 2.184a.75.75 0 0 1 .216.664l-.528 3.084 2.769-1.456a.75.75 0 0 1 .698 0l2.77 1.456-.53-3.084a.75.75 0 0 1 .216-.664l2.24-2.183-3.096-.45a.75.75 0 0 1-.564-.41L8 2.694Z"
-                    ></path>
-                  </svg>
-                  Star
-                </button>
-              </li>
-              <!-- </div> -->
-            </template>
-          </ul>
+          <!-- </li> -->
+          <!-- </div> -->
+          <!-- </ul> -->
         </section>
       </div>
       <footer>
@@ -271,7 +277,7 @@
           ></path>
         </svg>
         <p>@ 2023 Github Inc.</p>
-        <ul class="nav-list">
+        <ul id="nav-list">
           <li><nav>Terms</nav></li>
           <li><nav>Privacy</nav></li>
           <li><nav>Security</nav></li>
